--- a/projects.html
+++ b/projects.html
@@ -111,7 +111,7 @@
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology Officer at Conduent</p>
+            <p>Chief Technology Officer</p>
         </div>
         <nav>
             <ul>
