--- a/contact.html
+++ b/contact.html
@@ -80,13 +80,38 @@
         .flex-container div {
             flex: 1;
         }
+        @media (max-width: 768px) {
+            .container {
+                width: 95%;
+                margin: auto;
+            }
+            header {
+                flex-direction: column;
+                text-align: center;
+            }
+            header ul {
+                flex-direction: column;
+            }
+            header li {
+                padding: 10px 0;
+                border: none;
+            }
+            .flex-container {
+                flex-direction: column;
+                align-items: center;
+                text-align: center;
+            }
+            .flex-container img {
+                margin: 0 0 20px 0;
+            }
+        }
     </style>
 </head>
 <body>
     <header>
         <div id="branding">
             <h1>Rahul Gupta</h1>
-            <p>Chief Technology & Product Officer</p>
+            <p>Chief Technology Officer</p>
         </div>
         <nav>
             <ul>
