--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
-    <meta name="description" content="Rahul Gupta, CTO at Conduent, offers expert advisory services in technology transformation, product modernization, and technology spend optimization.">
+    <meta name="description" content="Rahul Gupta, CTO, leads or advises organizations in their technology transformation, product modernization, and technology spend optimization.">
     <meta name="keywords" content="Rahul Gupta, CTO, Chief Technology Officer, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO, executive leadership, digital transformation, IT management, AI integration, machine learning, Conduent, technology spend, operational efficiency, cloud adoption, data analytics, business transformation, product management, platform engineering, security compliance">
     <meta name="author" content="Rahul Gupta">
     <style>
@@ -132,8 +132,17 @@
             <div class="flex-container">
                 <img src="https://media.licdn.com/dms/image/C4D03AQEgAjrP7RvJ5w/profile-displayphoto-shrink_400_400/0/1645896906117?e=1724889600&v=beta&t=N65W_OQcZWQET42Idb28Xysm9PhY7JGGcc7i5BGO9QU" alt="Rahul Gupta - Chief Technology Officer at Conduent">
                 <div>
-                    <p>I am Rahul Gupta, a seasoned C-suite technology leader with extensive experience in managing large-scale technology transformations and product management. Currently, I serve as the Chief Technology Officer at Conduent, a global leader in digital interactions and business process outsourcing. With over 20 years of experience in the IT services industry, I have successfully delivered YOY revenue growth of 15%, optimized technology spend by 35%, and improved operating margins by 10%.</p>
-                    <p>Throughout my career, I have led the development and implementation of over 150 technology products and managed teams exceeding 8,000 professionals. My expertise lies in product and platform engineering, defining strategic technology roadmaps, and executing major business transformations. I am passionate about embedding AI/ML into core products to deliver exceptional value to end users and customers.</p>
+                    <p>A seasoned C-suite technology leader with extensive experience in managing large-scale technology transformations and product management. Currently, I serve as the Chief Technology Officer at Conduent, a global leader in digital interactions and business process outsourcing. With over 24 years of experience in the IT services industry, I have successfully delivered YOY revenue growth of 15%, optimized technology spend by 35%, and improved operating margins by 10%.</p>
+                    <p>I have been managing a portfolio of all Technology Products development and client implementation services and drive company's revenue growth with a solution and client centric approach. Played dual roles of CTO and CIO, overseeing technology products build, client implementations, and overall client-side IT services.</p>
+                    <p>My expertise spans across several key areas:</p>
+                    <ul>
+                        <li><strong>Digital Transformation:</strong> Leading the shift from transactional systems to digital platforms.</li>
+                        <li><strong>AI/ML Integration:</strong> Embedding AI and ML into core products to enhance functionality and value.</li>
+                        <li><strong>Cloud Native Product Engineering:</strong> Transitioning from lift-and-shift to cloud-native architectures.</li>
+                        <li><strong>Modular Architecture:</strong> Moving from monolithic structures to modular, flexible designs.</li>
+                        <li><strong>API & Microservices:</strong> Implementing API and microservices-based integration for seamless connectivity.</li>
+                    </ul>
+                    <p>Before joining Conduent, I held senior leadership roles at Capgemini, Infosys, and HCL, managing P&Ls of up to $1 billion. I have significant experience leading enterprise transformations across ERP, CRM, BI, HR, and EAI for clients in various industries. My core strength lies in aligning technology investments to drive revenue growth, improve profitability, and enhance quality for client retention.</p>
                 </div>
             </div>
         </section>
