--- a/services.html
+++ b/services.html
@@ -128,8 +128,8 @@
 
     <div class="container">
         <section id="services" class="section">
-            <h2>Services</h2>
-            <p>With extensive experience in technology platform transformation, product and services modernization, and technology spend optimization, I offer the following consulting services:</p>
+            <h2>Expertise</h2>
+            <p>With extensive experience in technology products & platforms transformation, technology services modernization, and spend optimization, my experience is in areas of:</p>
             <ul>
                 <li>CTO Advisory Services: Strategic technology planning, innovation leadership, and technology roadmap development.</li>
                 <li>CIO Advisory Services: IT infrastructure optimization, enterprise application management, and IT operations improvement.</li>
@@ -137,7 +137,7 @@
                 <li>Technology Spend Optimization: Identifying cost-saving opportunities, optimizing technology investments, and enhancing ROI.</li>
                 <li>Transformation Leadership: Leading digital transformation initiatives, modernizing legacy systems, and driving organizational change.</li>
             </ul>
-            <p>If you are looking to hire a seasoned technology leader for CTO, CIO, or CDO roles, I am open to exploring opportunities where I can bring my expertise to drive business growth and technological advancement.</p>
+            <p>I have played CTO, CIO, or CDO roles in my career at publically listed technology and consulting companies. I value add to companies with my expertise to drive business growth and technological advancement.</p>
         </section>
     </div>
 
