--- a/index.html
+++ b/index.html
@@ -142,7 +142,8 @@
                         <li><strong>Modular Architecture:</strong> Moving from monolithic structures to modular, flexible designs.</li>
                         <li><strong>API & Microservices:</strong> Implementing API and microservices-based integration for seamless connectivity.</li>
                     </ul>
-                    <p>Before joining Conduent, I held senior leadership roles at Capgemini, Infosys, and HCL, managing P&Ls of up to $1 billion. I have significant experience leading enterprise transformations across ERP, CRM, BI, HR, and EAI for clients in various industries. My core strength lies in aligning technology investments to drive revenue growth, improve profitability, and enhance quality for client retention.</p>
+                    <p>Before joining Conduent, I held senior leadership roles at Capgemini, Infosys, and HCL, managing P&Ls of up to $1 billion. From my 17+ years in Technology Consulting, I have significant experience leading enterprise transformations across ERP, CRM, BI, HR, and EAI for clients in various industries. My core strength lies in aligning technology investments to drive revenue growth, improve profitability, and enhance quality for client retention.</p>
+                    </p>Aligning technology investments to revenue growth, improve profitability and at same time improve quality for client retention has been my strengths throughout my career at Consulting companies pre Conduent and last 7 years at Conduent. Transformation technology for any industry into a revenue & growth, and stock market valuation amidst change management culture is my core strength.</p>
                 </div>
             </div>
         </section>
