--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rahul Gupta - Services</title>
+    <title>Rahul Gupta - Expertise</title>
     <meta name="description" content="Services offered by Rahul Gupta, including CTO, CIO, CDO advisory services, technology spend optimization, and transformation leadership.">
     <meta name="keywords" content="Rahul Gupta, CTO, Services, technology advisory, CIO, CDO, technology spend optimization, digital transformation, leadership">
     <meta name="author" content="Rahul Gupta">
@@ -118,7 +118,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="achievements.html">Achievements</a></li>
-                <li><a href="services.html">Services</a></li>
+                <li><a href="services.html">Expertise</a></li>
                 <li><a href="testimonials.html">Testimonials</a></li>
                 <li><a href="blog.html">Blog</a></li>
                 <li><a href="contact.html">Contact</a></li>
