--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - CTO | Technology Transformation Expert | Advisory Services</title>
-    <meta name="description" content="Rahul Gupta, CTO, leads or advises organizations in their technology transformation, product modernization, and technology spend optimization.">
-    <meta name="keywords" content="Rahul Gupta, CTO, Chief Technology Officer, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO, executive leadership, digital transformation, IT management, AI integration, machine learning, Conduent, technology spend, operational efficiency, cloud adoption, data analytics, business transformation, product management, platform engineering, security compliance">
+    <meta name="description" content="Rahul Gupta, CTO, leads or advises organizations in their technology transformation, product modernization, and technology spend optimization.CTO, CIO, CDO">
+    <meta name="keywords" content="Rahul Gupta, CTO, Chief Technology Officer, CIO, Chief Information Officer, CDO, Chief Digital Officer, Chief Executive Officer, CEO, technology transformation, product modernization, technology spend optimization, advisory services, CIO, CDO, executive leadership, digital transformation, IT management, AI integration, machine learning, Conduent, technology spend, operational efficiency, cloud adoption, data analytics, business transformation, product management, platform engineering, security compliance, revenue growth, strategic planning">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
