--- a/achievements.html
+++ b/achievements.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Achievements</title>
     <meta name="description" content="Achievements of Rahul Gupta, CTO and technology transformation expert.">
-    <meta name="keywords" content="Rahul Gupta, CTO, Achievements, technology transformation, business optimization">
+    <meta name="keywords" content="Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
