--- a/projects.html
+++ b/projects.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Projects</title>
     <meta name="description" content="Projects led by Rahul Gupta, including technology modernization and AI/ML integration.">
-    <meta name="keywords" content="Rahul Gupta, CTO, Projects, technology transformation, AI integration, ML, Conduent">
+    <meta name="keywords" content="Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
