--- a/testimonials.html
+++ b/testimonials.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Testimonials</title>
     <meta name="description" content="Testimonials from colleagues and clients about Rahul Gupta's exceptional leadership and technology expertise.">
-    <meta name="keywords" content="Rahul Gupta, CTO, Testimonials, leadership, technology expertise, client feedback">
+    <meta name="keywords" content="Rahul Gupta, CTO, Testimonials, leadership, technology expertise, client feedback, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
