--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Blog</title>
     <meta name="description" content="Blog posts by Rahul Gupta on technology trends, optimizing technology spend, and AI/ML in legacy systems.">
-    <meta name="keywords" content="Rahul Gupta, CTO, Blog, technology trends, optimizing technology spend, AI, ML, legacy systems">
+    <meta name="keywords" content="Rahul Gupta, CTO, Blog, technology trends, optimizing technology spend, AI, ML, legacy systems, Health Care, Financial Services, Banking, Insurance, Call Center, Transportation, BPO, Enterprise Applications, Consulting">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
