--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Contact</title>
     <meta name="description" content="Contact Rahul Gupta via LinkedIn or email for inquiries about technology advisory services.">
-    <meta name="keywords" content="Rahul Gupta, CTO, Contact, LinkedIn, email">
+    <meta name="keywords" content="Rahul Gupta, CTO, Contact, LinkedIn, email, Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent, Health Care, Financial Services, Banking, Insurance, Call Center, Transportation, BPO, Enterprise Applications, Consulting">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
