--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rahul Gupta - Expertise</title>
     <meta name="description" content="Services offered by Rahul Gupta, including CTO, CIO, CDO advisory services, technology spend optimization, and transformation leadership.">
-    <meta name="keywords" content="Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent, Services, technology advisory, CIO, CDO, technology spend optimization, digital transformation, leadership">
+    <meta name="keywords" content="Rahul Gupta, Chief Technology Officer, CTO, Chief Information Officer, CIO, Chief Digital Officer, CDO, CEO, Achievements, product management, product engineering, innovation, technology transformation, Digital Transformation, AI, Machine Learning, Cloud Adoption, business optimization, Capgemini, Infosys, Conduent, Services, technology advisory, CIO, CDO, technology spend optimization, digital transformation, leadership, ealthcare, Health Care, Financial Services, Banking, Insurance, Call Center, BPO, Technology Consulting">
     <meta name="author" content="Rahul Gupta">
     <style>
         body {
