--- a/projects.html
+++ b/projects.html
@@ -129,14 +129,42 @@
     <div class="container">
         <section id="projects" class="section">
             <h2>Projects</h2>
-            <p>During my tenure at Conduent, I have led the modernization of several key products, including:</p>
+            <p>Throughout my career, I have led numerous large-scale technology transformation projects, delivering significant business value and technological advancements. Here are some key projects:</p>
+            <h3>Financial Services</h3>
             <ul>
-                <li>Financial Services: Auto Loan Servicing, Mortgage Services, Lockbox, Call Center, Payments, Insurance Claims inbound and adjudication</li>
-                <li>Health Care Solutions: Medicaid & Commercial Claims, Pharmacy Benefits Management, Disease Surveillance, Community Health, Pharma Patience Assistance Services & Hub, Provider Care Management, Payment Integrity Services & Subrogation</li>
-                <li>Transportation: Road Usage Charging / Tolling, Transit Fare Collection, Public Safety and Curbside</li>
-                <li>HRO/ TBO: Total Benefits Administration, Defined Benefits (Pension) and Defined Contributions</li>
-                <li>Commercial: Automated Document Management, Printmail</li>
+                <li><strong>Auto Loan Servicing:</strong> Developed a comprehensive auto loan servicing platform, improving loan processing times and customer satisfaction.</li>
+                <li><strong>Mortgage Services:</strong> Implemented end-to-end mortgage processing solutions, enhancing operational efficiency and compliance.</li>
+                <li><strong>Lockbox Services:</strong> Streamlined lockbox processing for faster and more accurate financial transactions.</li>
+                <li><strong>Call Center Solutions:</strong> Introduced AI-powered call center analytics to optimize customer service operations.</li>
+                <li><strong>Payments and Insurance Claims:</strong> Innovated payment processing and claims adjudication systems, reducing processing times and increasing accuracy.</li>
             </ul>
+            <h3>Health Care Solutions</h3>
+            <ul>
+                <li><strong>Medicaid & Commercial Claims:</strong> Modernized claims processing systems, enhancing efficiency and reducing costs.</li>
+                <li><strong>Pharmacy Benefits Management:</strong> Developed a robust pharmacy benefits platform, improving medication adherence and patient outcomes.</li>
+                <li><strong>Disease Surveillance and Community Health:</strong> Implemented advanced analytics for disease tracking and community health management.</li>
+                <li><strong>Provider Care Management:</strong> Enhanced care management systems to support better patient care coordination.</li>
+                <li><strong>Payment Integrity Services:</strong> Improved payment integrity and subrogation processes through automation and analytics.</li>
+            </ul>
+            <h3>Transportation</h3>
+            <ul>
+                <li><strong>Road Usage Charging / Tolling:</strong> Developed and implemented advanced tolling solutions using IoT and AI technologies.</li>
+                <li><strong>Transit Fare Collection:</strong> Introduced automated fare collection systems to streamline public transportation.</li>
+                <li><strong>Public Safety and Curbside Management:</strong> Enhanced public safety through smart curbside management and traffic enforcement technologies.</li>
+            </ul>
+            <h3>HRO/ TBO</h3>
+            <ul>
+                <li><strong>Total Benefits Administration:</strong> Transformed benefits administration systems, improving service delivery and compliance.</li>
+                <li><strong>Defined Benefits and Defined Contributions:</strong> Implemented robust pension and retirement benefit solutions.</li>
+            </ul>
+            <h3>Commercial Solutions</h3>
+            <ul>
+                <li><strong>Automated Document Management:</strong> Developed automated document management systems to improve efficiency and accuracy.</li>
+                <li><strong>Printmail Solutions:</strong> Streamlined printmail operations, reducing costs and improving turnaround times.</li>
+            </ul>
+
+
+            
             <p>These projects involved making the products modular, integrating AI and ML, and updating them to the latest standards, significantly reducing technology debt and enhancing operational efficiency.</p>
         </section>
     </div>
