--- a/projects.html
+++ b/projects.html
@@ -128,8 +128,8 @@
 
     <div class="container">
         <section id="projects" class="section">
-            <h2>Projects</h2>
-            <p>Throughout my career, I have led numerous large-scale technology transformation projects, delivering significant business value and technological advancements. Here are some key projects:</p>
+            <h2>Projects & Products</h2>
+            <p>Throughout my career, I have led numerous large-scale technology transformation projects on products and client implementations, delivering significant business value and technological advancements. Here are some key products which were transformed and/or launched by me and my team:</p>
             <h3>Financial Services</h3>
             <ul>
                 <li><strong>Auto Loan Servicing:</strong> Developed a comprehensive auto loan servicing platform, improving loan processing times and customer satisfaction.</li>
