--- a/services.html
+++ b/services.html
@@ -129,14 +129,39 @@
     <div class="container">
         <section id="services" class="section">
             <h2>Expertise</h2>
-            <p>With extensive experience in technology products & platforms transformation, technology services modernization, and spend optimization, my experience is in areas of:</p>
+            <p>As a seasoned technology leader, I bring a wealth of experience and expertise in driving business growth through technological innovation. Here are some key areas of my expertise:</p>
+
+            <h3>Technology Leadership</h3>
             <ul>
-                <li>CTO Advisory Services: Strategic technology planning, innovation leadership, and technology roadmap development.</li>
-                <li>CIO Advisory Services: IT infrastructure optimization, enterprise application management, and IT operations improvement.</li>
-                <li>CDO Advisory Services: Data strategy formulation, data governance, and leveraging data for business insights.</li>
-                <li>Technology Spend Optimization: Identifying cost-saving opportunities, optimizing technology investments, and enhancing ROI.</li>
-                <li>Transformation Leadership: Leading digital transformation initiatives, modernizing legacy systems, and driving organizational change.</li>
+                <li><strong>Strategic IT Planning:</strong> Crafting and executing strategic IT roadmaps aligned with business goals, ensuring competitive advantage and sustainable growth.</li>
+                <li><strong>Digital Transformation:</strong> Leading comprehensive digital transformation initiatives, transitioning from legacy systems to advanced digital platforms.</li>
+                <li><strong>AI/ML Integration:</strong> Embedding AI and ML into core products to drive innovation and enhance functionality.</li>
+                <li><strong>Cloud Native Engineering:</strong> Adopting cloud-native architectures to improve scalability, efficiency, and cost-effectiveness.</li>
             </ul>
+
+            <h3>Product and Platform Engineering</h3>
+            <ul>
+                <li><strong>Product Roadmap Development:</strong> Defining and executing multi-year product roadmaps, aligning technology investments with business objectives.</li>
+                <li><strong>Platform Modernization:</strong> Transitioning from monolithic to modular architectures, improving flexibility and time-to-market for new features.</li>
+                <li><strong>API & Microservices:</strong> Implementing API and microservices-based integration for seamless connectivity and enhanced interoperability.</li>
+                <li><strong>Cloud Strategy:</strong> Leading cloud adoption initiatives, consolidating data centers, and optimizing cloud infrastructure.</li>
+            </ul>
+
+            <h3>Operational Excellence</h3>
+            <ul>
+                <li><strong>Technology Spend Optimization:</strong> Identifying cost-saving opportunities and optimizing technology investments to enhance ROI.</li>
+                <li><strong>Quality Improvement:</strong> Standardizing procedures and implementing best practices to improve service quality and reduce variability.</li>
+                <li><strong>Data-Driven Decision Making:</strong> Leveraging advanced analytics to drive business insights and support strategic decision-making.</li>
+            </ul>
+
+            <h3>Team and Stakeholder Management</h3>
+            <ul>
+                <li><strong>Leadership and Mentorship:</strong> Building and leading high-performing teams, fostering a culture of collaboration and innovation.</li>
+                <li><strong>Stakeholder Engagement:</strong> Establishing strong relationships with business leaders and stakeholders, ensuring alignment of technology initiatives with business needs.</li>
+                <li><strong>Change Management:</strong> Leading organizational change initiatives to support business transformation and ensure successful implementation of new technologies.</li>
+            </ul>
+
+
             <p>I have played CTO, CIO, or CDO roles in my career at publically listed technology and consulting companies. I value add to companies with my expertise to drive business growth and technological advancement.</p>
         </section>
     </div>
