--- a/achievements.html
+++ b/achievements.html
@@ -129,11 +129,42 @@
     <div class="container">
         <section id="achievements" class="section">
             <h2>Achievements</h2>
+            <p>My career is marked by significant achievements in technology leadership, product innovation, and business transformation. Here are some highlights:</p>
+
+            <h3>Business and Technology Impact</h3>
             <ul>
+                <li><strong>Revenue Growth:</strong> Delivered YOY revenue growth of 15% by implementing innovative technology solutions and improving operational efficiency.</li>
+                <li><strong>Technology Spend Optimization:</strong> Optimized technology spend by 35%, saving $450M through modernization and strategic transformations.</li>
+                <li><strong>Operational Efficiency:</strong> Improved operating margin by 10% through process optimization and technology enhancements.</li>
+            </ul>
+
+            <h3>Product and Platform Innovations</h3>
+            <ul>
+                <li><strong>AI/ML Products:</strong> Developed and launched 25+ AI, ML, and analytics products, enhancing the value proposition of core vertical offerings.</li>
+                <li><strong>Patents and Innovations:</strong> Contributed to 380+ active patents in areas like computer vision, machine learning, cognitive analytics, AI, IoT, and intelligent automation.</li>
+                <li><strong>Digital Transformation:</strong> Led the transition from 300+ bespoke platforms to 100+ industry-standard products, saving $450M in IT costs.</li>
+            </ul>
+
+            <h3>Leadership and Team Building</h3>
+            <ul>
+                <li><strong>Team Expansion:</strong> Grew the Conduent India development center from 1,000 to 4,500+ IT professionals, ensuring 60% of global delivery from India.</li>
+            <li><strong>Stakeholder Trust:</strong> Revived trust with business leaders by fostering a culture of transparency and accountability.</li>
+            <li><strong>Cloud Strategy:</strong> Increased cloud adoption from <10% to 60%, consolidating 102 data centers to fewer than 20.</li>
+            </ul>
+
+            <h3>Client and Market Impact</h3>
+            <ul>
+                <li><strong>Client Implementations:</strong> Successfully managed over 3,000 client implementations, significantly improving client satisfaction and retention.</li>
+                <li><strong>Security and Compliance:</strong> Led the foundation of security controls and compliance, completing a three-year backlogged PCI certification for key clients in six months.</li>
+                <li><strong>Market Leadership:</strong> Positioned Conduent as a leader in real-time payment services through innovative use of blockchain and ledger-based technologies.</li>
+            <ul>
+
+            <h3>Summary:</h3>
+
                 <li>Improved EBITDA by 4% by reducing implementation time from 24 to 9 months.</li>
                 <li>Increased re-use of standard products from less than 10% to 70%.</li>
-                <li>Reduced technology spend from $1.45B to $900M through a $500M capex product modernization & optimization program.</li>
-                <li>Managed $1B payments in a year for 22 different states and millions of participants by crafting a vision for blockchain and ledger-based technologies.</li>
+                <li>Reduced technology spend 40% through a product modernization/transformation program aligned to strategic goals & supplier/vendor optimization program.</li>
+                <li>Managed $1B payments in a year for 22 different states and millions of participants by crafting a vision for Payments Hub enabling Real Time Payments.</li>
                 <li>Achieved a 50% reduction in installation footprint time and cost for tolling by designing and integrating IoT-enabled roadside lanes.</li>
                 <li>Improved quality by 70% by developing and implementing standardized procedures across all projects.</li>
                 <li>Increased productivity by 20% through the elimination of redundant processes and the optimization of workflows.</li>
