--- a/projects.html
+++ b/projects.html
@@ -128,7 +128,7 @@
 
     <div class="container">
         <section id="projects" class="section">
-            <h2>Projects & Products</h2>
+            <h2>Products, Platforms & Solutions, and Client Projects</h2>
             <p>Throughout my career, I have led numerous large-scale technology transformation projects on products and client implementations, delivering significant business value and technological advancements. Here are some key products, platforms and solutions which were transformed and/or launched by me and my team, successfully imlpemented at clients as business process transformations:</p>
             <h3>Financial Services</h3>
             <ul>
