--- a/achievements.html
+++ b/achievements.html
@@ -159,19 +159,19 @@
                 <li><strong>Market Leadership:</strong> Positioned Conduent as a leader in real-time payment services through innovative use of blockchain and ledger-based technologies.</li>
             <ul>
 
-            <h3>Summary:</h3>
+        <h2>Summary:</h2>
 
-                <li>Improved EBITDA by 4% by reducing implementation time from 24 to 9 months.</li>
-                <li>Increased re-use of standard products from less than 10% to 70%.</li>
-                <li>Reduced technology spend 40% through a product modernization/transformation program aligned to strategic goals & supplier/vendor optimization program.</li>
-                <li>Managed $1B payments in a year for 22 different states and millions of participants by crafting a vision for Payments Hub enabling Real Time Payments.</li>
-                <li>Achieved a 50% reduction in installation footprint time and cost for tolling by designing and integrating IoT-enabled roadside lanes.</li>
-                <li>Improved quality by 70% by developing and implementing standardized procedures across all projects.</li>
-                <li>Increased productivity by 20% through the elimination of redundant processes and the optimization of workflows.</li>
-                <li>Developed and launched 25+ AI, ML, and analytics add-on products to enhance core vertical offerings.</li>
-                <li>Contributed to 380+ active patents in computer vision, machine learning, cognitive analytics, AI, IoT, and intelligent automation.</li>
-                <li>Transitioned from 300+ bespoke platforms to 100+ industry-standard technology products, saving $450M in IT costs.</li>
-                <li>Consolidated 102 data centers to less than 20 and increased cloud adoption from less than 10% to 60%.</li>
+            <li>Increased re-use of standard products from less than 10% to 70%.</li>
+            <li>Reduced technology spend 40% through a product modernization/transformation program aligned to strategic goals & supplier/vendor optimization program.</li>
+            <li>Payments Hub manages $1B payments in a year for 22 different states and millions of participants. Crafted a vision & product launch for Payments Hub enabling Real Time Payments.</li>
+            <li>Achieved a 50% reduction in installation footprint time and cost for tolling by designing and integrating IoT-enabled roadside lanes.</li>
+            <li>Improved quality by 70% by developing and implementing standardized procedures across all projects.</li>
+            <li>Increased productivity by 20% through the elimination of redundant processes and the optimization of workflows.</li>
+            <li>Developed and launched 25+ AI, ML, and analytics add-on products to enhance core vertical offerings.</li>
+            <li>Contributed to 380+ active patents in computer vision, machine learning, cognitive analytics, AI, IoT, and intelligent automation.</li>
+            <li>Transitioned from 300+ bespoke platforms to 100+ industry-standard technology products, saving $450M in IT costs.</li>
+            <li>Consolidated 102 data centers to less than 20 and increased cloud adoption from less than 10% to 60%.</li>
+            <li>Improved EBITDA by 4% by reducing implementation time from 24 to 9 months.</li>
             </ul>
         </section>
     </div>
