--- a/blog.html
+++ b/blog.html
@@ -130,8 +130,10 @@
         <section id="blog" class="section">
             <h2>Blog</h2>
             <article>
-                <h3>Evolution for Enterprises from AI to GenAI</h3>
+                <h3><a href="#blog4">Evolution for Enterprises from AI to GenAI</a></h3>
                 <p>Artificial Intelligence (AI) has revolutionized the way enterprises operate, driving efficiencies and innovations across various industries. The advent of Generative AI (GenAI) marks a significant advancement over traditional AI, leveraging large language models (LLMs) and the extensive computational power available on the cloud. This blog explores the evolution from AI to GenAI, differences between the two, and strategic steps for companies to adopt GenAI wisely.</p>
+            </article>
+            </article>
                 <h3><a href="#blog1">Key Trends in Technology Transformation</a></h3>
                 <p>As technology continues to evolve at a rapid pace, staying ahead of the curve is crucial for businesses. In this blog post, we explore the key trends driving technology transformation in 2024.</p>
             </article>
@@ -145,8 +147,8 @@
             </article>
 
 
-            <!-- Blog 1 -->
-                <div id="blog2" class="section">
+            <!-- Blog 4 -->
+                <div id="blog4" class="section">
                     <h3>The Evolution from AI to GenAI</h3>
                     <p><strong>Artificial Intelligence (AI):</strong><br>
                     AI encompasses a broad range of technologies that enable machines to mimic human intelligence. Traditional AI includes machine learning (ML) models that are trained to perform specific tasks such as image recognition, natural language processing (NLP), and predictive analytics. AI models improve over time through data exposure, learning patterns, and making data-driven decisions.</p>
@@ -208,7 +210,7 @@
                     <p>The transition from AI to GenAI represents a significant leap forward in the capabilities of intelligent systems. By understanding the differences, strategically adopting GenAI, and leveraging open-source technologies, companies can harness the power of GenAI to drive innovation and achieve their business objectives.</p>
             </article>
                 
-            <!-- Blog 2 -->
+            <!-- Blog 1 -->
             <div id="blog1" class="section">
                 <h3>Key Trends in Technology Transformation</h3>
                 <p>As technology continues to evolve at a rapid pace, staying ahead of the curve is crucial for businesses. Here are some of the key trends driving technology transformation in 2024:</p>
@@ -222,7 +224,7 @@
                 <p>Staying informed about these trends and incorporating them into your technology strategy can help your business remain competitive and innovative.</p>
             </div>
 
-            <!-- Blog 3 -->
+            <!-- Blog 2 -->
             <div id="blog2" class="section">
                 <h3>Optimizing Technology Spend: Strategies for Success</h3>
                 <p>Optimizing technology spend is essential for maximizing ROI and ensuring sustainable growth. Here are some effective strategies for managing technology investments:</p>
@@ -235,7 +237,7 @@
                 <p>By implementing these strategies, businesses can optimize their technology spend, enhance operational efficiency, and drive sustainable growth.</p>
             </div>
 
-            <!-- Blog 4 -->
+            <!-- Blog 3 -->
             <div id="blog3" class="section">
                 <h3>The Role of AI and ML in Modernizing Legacy Systems</h3>
                 <p>Artificial intelligence (AI) and machine learning (ML) are powerful tools for modernizing legacy systems. Here are some ways these technologies can enhance efficiency and drive innovation:</p>
