--- a/blog.html
+++ b/blog.html
@@ -158,8 +158,8 @@
         
                 <h4>Differences between AI and GenAI</h4>
                 <p><strong>Functionality:</strong><br>
-                AI: Primarily focused on classification, prediction, and optimization tasks.<br>
-                GenAI: Capable of generating creative content, simulating human-like interactions, and providing context-aware responses.</p>
+                <li>AI: Primarily focused on classification, prediction, and optimization tasks.<li>
+                <li>GenAI: Capable of generating creative content, simulating human-like interactions, and providing context-aware responses.<li></p>
         
                 <p><strong>Data Requirements:</strong><br>
                 AI: Requires structured data for training specific models.<br>
