--- a/index.html
+++ b/index.html
@@ -102,6 +102,9 @@
                 align-items: center;
                 text-align: center;
             }
+            .flex-container img {
+                margin: 0 0 20px 0;
+            }
             .flex-container div {
                 text-align: left;
                 width: 100%;
