--- a/blog.html
+++ b/blog.html
@@ -65,45 +65,14 @@
             text-align: center;
             padding: 10px 0;
         }
-        .flex-container {
-            display: flex;
-            align-items: flex-start;
-            flex-wrap: wrap;
+        .back-to-top {
+            text-align: right;
+            margin-top: 20px;
         }
-        .flex-container img {
-            width: 150px;
-            height: auto;
-            border-radius: 50%;
-            margin-right: 20px;
-            flex-shrink: 0;
-        }
-        .flex-container div {
-            flex: 1;
-        }
-        @media (max-width: 768px) {
-            .container {
-                width: 95%;
-                margin: auto;
-            }
-            header {
-                flex-direction: column;
-                text-align: center;
-            }
-            header ul {
-                flex-direction: column;
-            }
-            header li {
-                padding: 10px 0;
-                border: none;
-            }
-            .flex-container {
-                flex-direction: column;
-                align-items: center;
-                text-align: center;
-            }
-            .flex-container img {
-                margin: 0 0 20px 0;
-            }
+        .back-to-top a {
+            color: #333;
+            text-decoration: none;
+            font-size: 14px;
         }
     </style>
 </head>
@@ -132,18 +101,30 @@
             <article>
                 <h3><a href="#blog4">Evolution for Enterprises from AI to GenAI</a></h3>
                 <p>Artificial Intelligence (AI) has revolutionized the way enterprises operate, driving efficiencies and innovations across various industries. The advent of Generative AI (GenAI) marks a significant advancement over traditional AI, leveraging large language models (LLMs) and the extensive computational power available on the cloud. This blog explores the evolution from AI to GenAI, differences between the two, and strategic steps for companies to adopt GenAI wisely.</p>
+                <div class="back-to-top">
+                    <a href="#blog">Back to Top</a>
+                </div>
             </article>
             <article>
                 <h3><a href="#blog1">Key Trends in Technology Transformation</a></h3>
                 <p>As technology continues to evolve at a rapid pace, staying ahead of the curve is crucial for businesses. In this blog post, we explore the key trends driving technology transformation in 2024.</p>
+                <div class="back-to-top">
+                    <a href="#blog">Back to Top</a>
+                </div>
             </article>
             <article>
                 <h3><a href="#blog2">Optimizing Technology Spend: Strategies for Success</a></h3>
                 <p>Optimizing technology spend is essential for maximizing ROI and ensuring sustainable growth. This post delves into effective strategies for managing technology investments.</p>
+                <div class="back-to-top">
+                    <a href="#blog">Back to Top</a>
+                </div>
             </article>
             <article>
                 <h3><a href="#blog3">The Role of AI and ML in Modernizing Legacy Systems</a></h3>
                 <p>Artificial intelligence and machine learning are powerful tools for modernizing legacy systems. Learn how these technologies can enhance efficiency and drive innovation.</p>
+                <div class="back-to-top">
+                    <a href="#blog">Back to Top</a>
+                </div>
             </article>
 
             <!-- Blog 4 -->
@@ -204,6 +185,9 @@
         
                 <h4>Conclusion</h4>
                 <p>The transition from AI to GenAI represents a significant leap forward in the capabilities of intelligent systems. By understanding the differences, strategically adopting GenAI, and leveraging open-source technologies, companies can harness the power of GenAI to drive innovation and achieve their business objectives.</p>
+                <div class="back-to-top">
+                    <a href="#blog">Back to Top</a>
+                </div>
             </div>
 
             <!-- Blog 1 -->
@@ -218,6 +202,9 @@
                     <li><strong>Blockchain Technology:</strong> Blockchain is gaining traction beyond cryptocurrencies. It's being used for secure transactions, supply chain transparency, and decentralized applications.</li>
                 </ul>
                 <p>Staying informed about these trends and incorporating them into your technology strategy can help your business remain competitive and innovative.</p>
+                <div class="back-to-top">
+                    <a href="#blog">Back to Top</a>
+                </div>
             </div>
 
             <!-- Blog 2 -->
@@ -231,6 +218,9 @@
                     <li><strong>Implement Automation:</strong> Automation can significantly reduce operational costs. Invest in automation tools to streamline processes and improve efficiency.</li>
                 </ul>
                 <p>By implementing these strategies, businesses can optimize their technology spend, enhance operational efficiency, and drive sustainable growth.</p>
+                <div class="back-to-top">
+                    <a href="#blog">Back to Top</a>
+                </div>
             </div>
 
             <!-- Blog 3 -->
@@ -245,6 +235,9 @@
                     <li><strong>Security Enhancements:</strong> AI and ML can detect and respond to security threats in real-time, providing an additional layer of protection for legacy systems.</li>
                 </ul>
                 <p>By integrating AI and ML into legacy systems, businesses can drive innovation, improve efficiency, and stay competitive in a rapidly changing technological landscape.</p>
+                <div class="back-to-top">
+                    <a href="#blog">Back to Top</a>
+                </div>
             </div>
         </section>
     </div>
