--- a/index.html
+++ b/index.html
@@ -154,6 +154,8 @@
         </section>
     </div>
 
+    <p>Read more about my <a href="projects.html">key projects</a> in Health Care, Financial Services, BPO, and HRO.</p>
+
     <footer>
         <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
     </footer>
