--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </section>
     </div>
 
-    <p>Read more about my <a href="projects.html">key projects</a> in Health Care, Financial Services, BPO, and HRO.</p>
+    <p>Read more about my <a href="projects.html">my work</a> in Health Care, Financial Services, Transportation, Call Center, BPO, and HRO.</p>
 
     <footer>
         <p>&copy; 2024 Rahul Gupta. All Rights Reserved.</p>
